--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,9 +3,9 @@ body {
     display: flex;
     justify-content: center;
     overflow-x: hidden;
-  }
-  
-  .container {
+}
+
+.container {
     min-height: 100vh;
     max-width: 480px !important;
     background-color: #0a0a0a;
@@ -13,146 +13,174 @@ body {
     /* border-radius: 20px; */
     padding: 15px 25px 45px;
     margin: auto;
-  }
+}
 
-  .main {
-    height: 600px;
-  }
-  
-  .button.is-dark-gray,
-  .v-btn.is-dark-gray {
+.main {
+    height: 700px;
+    }
+    
+    .button.is-dark-gray,
+    .v-btn.is-dark-gray {
     /* background-color: #d2d2d2; */
     background-image: linear-gradient(to bottom right, #aee1ff, #6f90ea);
     border: none;
-  }
+}
 
-  .mute-button {
+.tabs.is-toggle .button.is-dark:hover {
+    background-color: #2f2f2f;
+}
+.mute-button {
     flex: none;
     width: 25%;
-  }
-  
-  .v-btns {
+}
+
+.v-btns {
     width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
     height: 80%;
-  }
-  
-  .h-btns {
+}
+
+.h-btns {
     display: flex;
     /* flex-direction: column; */
     text-align: center;
     height: 20%;
-  }
-  
-  .h-btns .button {
+}
+
+.h-btns .button {
     background-color: #aee1ff;
     border-right: 1px solid #efefef;
     border-radius: 0;
     flex-grow: 1;
     height: 100%;
-  }
-  
-  .v-btn,
-  .v-btns .button {
+}
+
+.v-btn,
+.v-btns .button {
     border-radius: 0;
     flex-grow: 1;
-  }
-  
-  .pulse:active {
-    color: transparent;
-  }
-  
-  .tabs.is-toggle li.no-outline a {
-    border: none;
-  }
+}
 
-  /***
+.pulse:active {
+    color: transparent;
+}
+
+.tabs.is-toggle li.no-outline a {
+    border: none;
+}
+
+/***
   Center Circle
   ***/
-  .main-circle {
+.main-circle {
     width: 260px;
     height: 260px;
     position: relative;
     rotate: 45deg;
 
-  }
-  .quarter {
-    position:absolute;
-    width:50%;
-    height:50%;
+}
+
+.quarter {
+    position: absolute;
+        width: 50%;
+        height: 50%;
     /* transition:background-color 0.2s ease-in-out; */
-  }
-  .q-up {
-    top:0;
-    left:0;
-    border-radius:100% 0 0 0;
-  }
-  .q-right {
-    top:0;
-    right:0;
-    border-radius:0 100% 0 0 ;
-  }
-  .q-left {
-    bottom:0;
-    left:0;
-    border-radius:0 0 0 100%;
-  }
-  .q-down {
-    bottom:0;
-    right:0;
-    border-radius:0 0 100% 0 ;
-  }
-  .circle-center {
-    width:50%;
-    height:50%;
-    background-color:transparent;
-    position:absolute;
-    top:25%;
-    left:25%;
-    border-radius:50%;
+}
+
+.q-up {
+    top: 0;
+        left: 0;
+        border-radius: 100% 0 0 0;
+    }
+
+.q-right {
+    top: 0;
+        right: 0;
+        border-radius: 0 100% 0 0;
+    }
+
+.q-left {
+    bottom: 0;
+        left: 0;
+        border-radius: 0 0 0 100%;
+    }
+
+.q-down {
+    bottom: 0;
+        right: 0;
+        border-radius: 0 0 100% 0;
+    }
+
+.circle-center {
+    width: 50%;
+        height: 50%;
+        background-color: transparent;
+        position: absolute;
+        top: 25%;
+        left: 25%;
+        border-radius: 50%;
     rotate: -45deg;
-    }
-    .circle-center:hover {
-      background-color: red;
-    }
-    .main-circle a .icon {
-      rotate: -45deg;
-    }
-  
-    .home {
-      position: absolute;
-      left: 20px;
-      top: 120px;
+}
+
+.circle-center:hover {
+    background-color: red;
+}
+
+.main-circle a .icon {
+    rotate: -45deg;
+}
+
+.home {
+    position: absolute;
+    left: 1rem;
+        top: 0;
     }
 
-    .back {
-      position: absolute;
-      left: 20px;
-      top: 420px;
+.back {
+    position: absolute;
+    left: 1rem;
+        bottom: 0;
     }
 
-    .settings {
-      position: absolute;
-      right: 20px;
-      top: 120px;
+.settings {
+    position: absolute;
+    right: 1rem;
+        top: 0;
     }
 
-    .guide {
-      position: absolute;
-      right: 20px;
-      top: 420px;
+.guide {
+    position: absolute;
+    right: 1rem;
+        bottom: 0;
+    }
+    
+    .app-select {
+        border: 0;
+        width: 75%
+    }
+    
+    #modal-close {
+        z-index: 50;
+    }
+    
+    .is-absolute {
+        position: absolute;
+    }
+    
+    .is-width-full {
+        width: 100%;
     }
 
-  /* 
-  .v-btns .v-btn:not(:last-child) {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-  
-  .v-btns .v-btn:not(:first-child) {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  } */
-  
+.status {
+    background-color: #dFaf22;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50px;
+    z-index: 50;
+}
+#joystick {
+    border: 1px solid #9C9898;
+}
